--- a/app/views/caseaccess/pages/PA-00321-2018-a.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-a.html
@@ -61,37 +61,47 @@ Case details
     </h2>
     <ul class="govuk-tabs__list">
       <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
-        <a class="govuk-tabs__tab" href="#event">
+        <a class="govuk-tabs__tab" href="#">
+          Tasks
+        </a>
+      </li>
+      <li class="govuk-tabs__list-item">
+        <a class="govuk-tabs__tab" href="#">
+          Roles / access
+        </a>
+      </li>
+      <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
+        <a class="govuk-tabs__tab" href="#">
           Overview
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
+        <a class="govuk-tabs__tab" href="#">
           Appeal
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
+        <a class="govuk-tabs__tab" href="#">
           Appellent
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
+        <a class="govuk-tabs__tab" href="#">
           Documents
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
+        <a class="govuk-tabs__tab" href="#">
           Directions
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week" >
+        <a class="govuk-tabs__tab" href="#" >
           Applications
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
+        <a class="govuk-tabs__tab" href="#">
           Case notes
         </a>
       </li>
