--- a/app/views/caseaccess/pages/PA-00321-2018-request.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-request.html
@@ -42,7 +42,7 @@ Case details
       items: [
         {
           value: "email",
-          text: "Reviewer"
+          text: "Reason A"
         },
         {
           value: "phone",
@@ -67,18 +67,21 @@ Case details
     }) }}
 
 
-
-
     {{ govukButton({
   text: "Submit",
   href: "PA-00321-2018-confirmation",
   classes: "govuk-!-margin-right-3"
-}) }}
+}) }}<p><a class="govuk-body" href="results">Cancel</a></p>
+<!--
 {{ govukButton({
   text: "Cancel",
   href: "results",
   classes: "govuk-button--secondary"
 }) }}
+-->
+
+
+
 </div>
 </div>
 <form method=""  action="#" class="for4" style=" float: left; margin-top: 60px;">
