--- a/app/views/caseaccess/pages/PA-00321-2018.html
+++ b/app/views/caseaccess/pages/PA-00321-2018.html
@@ -134,10 +134,14 @@ Case details
   href: "PA-00321-2018-request",
   classes: "govuk-!-margin-right-3"
 }) }}
+<!--
 {{ govukButton({
   text: "Cancel",
   href: "results",
   classes: "govuk-button--secondary"
 }) }}
+-->
+
   </form>
+  <a class="govuk-body" href="results">Cancel</a>
 {% endblock %}
