--- a/app/views/caseaccess/pages/PA-00467-2017-request.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-request.html
@@ -42,7 +42,7 @@ Case details
       items: [
         {
           value: "email",
-          text: "Reviewer"
+          text: "Reason A"
         },
         {
           value: "phone",
@@ -74,11 +74,14 @@ Case details
   href: "PA-00467-2017-confirmation",
   classes: "govuk-!-margin-right-3"
 }) }}
+
+<!--
 {{ govukButton({
   text: "Cancel",
   href: "results",
   classes: "govuk-button--secondary"
-}) }}
+}) }} -->
+<p>  <a class="govuk-body" href="results-s2">Cancel</a></p>
 </div>
 </div>
 <form method=""  action="#" class="for4" style=" float: left; margin-top: 60px;">
