--- a/app/views/caseaccess/pages/PA-00467-2017-trr-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trr-case.html
@@ -63,12 +63,14 @@ Case details
   classes: "govuk-!-margin-right-3",
   href: "/caseaccess/pages/PA-00467-2017-trrc-case"
 }) }}
-
+<!--
 {{ govukButton({
   text: "Cancel and unassign task",
   href: "/caseaccess/pages/PA-00467-2017-t",
   classes: "govuk-button--secondary"
 }) }}
+-->
+  <p><a class="govuk-body" href="/caseaccess/pages/PA-00467-2017-t">Cancel and unassign task</a></p>
 </div>
 
 </div>
