--- a/app/views/caseaccess/pages/PA-00467-2017-trr.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trr.html
@@ -75,12 +75,14 @@ Case details
   classes: "govuk-!-margin-right-3",
   href: "/caseaccess/pages/PA-00467-2017-trrc"
 }) }}
-
+<!--
 {{ govukButton({
   text: "Cancel and unassign task",
   href: "/caseaccess/pages/available-tasks-s2o",
   classes: "govuk-button--secondary"
-}) }}
+}) }} -->
+
+  <p><a class="govuk-body" href="/caseaccess/pages/available-tasks-s2o">Cancel and unassign task</a></p>
 </div>
 
 </div>
