--- a/app/views/caseaccess/pages/PA-00467-2017.html
+++ b/app/views/caseaccess/pages/PA-00467-2017.html
@@ -130,10 +130,12 @@ Specific access.<br>Access requires manual authorisation. Access to this case is
   href: "PA-00467-2017-request",
   classes: "govuk-!-margin-right-3"
 }) }}
+<!--
 {{ govukButton({
   text: "Cancel",
   href: "results-s2",
   classes: "govuk-button--secondary"
-}) }}
+}) }} -->
   </form>
+    <a class="govuk-body" href="results-s2">Cancel</a>
 {% endblock %}
