--- a/app/views/caseaccess/pages/available-tasks-c.html
+++ b/app/views/caseaccess/pages/available-tasks-c.html
@@ -36,6 +36,11 @@ My work
                 My cases
               </a>
             </li>
+            <li class="hmcts-sub-navigation__item">
+              <a class="hmcts-sub-navigation__link"  href="mycases-c">
+                My access
+              </a>
+            </li>
           </ul>
         </nav>
         <p class="govuk-body">Displaying <strong>4</strong> of <strong>4</strong> tasks</p>
@@ -60,7 +65,7 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--black">4 days</span> </td>
+                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--red">4 days</span> </td>
                   <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
@@ -71,7 +76,7 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--black">3 days</span>  </td>
+                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--orange">3 days</span>  </td>
                   <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
@@ -84,7 +89,7 @@ My work
                     <title>This case has more than one task. Review needed.</title><path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
                     C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" /></svg></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Create case summary</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--black">3 days</span>  </td>
+                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--orange">3 days</span>  </td>
                   <!--  <td class="govuk-table__cell">N/A</td> -->
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
@@ -95,7 +100,7 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review appellant case</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--black">1 days</span>  </td>
+                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--green">1 days</span>  </td>
                   <!--  <td class="govuk-table__cell">N/A</td> -->
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
