--- a/app/views/caseaccess/pages/mycases-c.html
+++ b/app/views/caseaccess/pages/mycases-c.html
@@ -36,10 +36,15 @@ My work
                     My cases
                   </a>
                 </li>
+                <li class="hmcts-sub-navigation__item">
+                  <a class="hmcts-sub-navigation__link"  href="#">
+                    My access
+                  </a>
+                </li>
               </ul>
             </nav
 </div>
-  <p class="govuk-body">Displaying <strong>4</strong> of <strong>4</strong> cases </p>
+  <p class="govuk-body">Displaying <strong>2</strong> of <strong>2</strong> cases </p>
         <table class="govuk-table ">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
@@ -77,28 +82,28 @@ My work
                   <!--   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
                     <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
-                  <tr class="govuk-table__row">
+        <!--          <tr class="govuk-table__row">
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Mr Peter Williams Vs Mrs Janet Richards</a></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Adoption</td>
-                    <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
+
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Mar 2021</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Apr 2021 </td>
-                  <!--    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">N/A</td> -->
+
                       <td class="govuk-table__cell"><a href="#" class="right_">Go to case</a></td>
                   </tr>
                   <tr class="govuk-table__row">
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Mrs Mary Hunter-bridge Vs Mrs Caroline Manning</a></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Family</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Care and supervision</td>
-                      <!-- <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
+
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">22 Mar 2021</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">22 Mar 2021 </td>
-                  <!--    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">N/A</td> -->
+
                       <td class="govuk-table__cell"><a href="#" class="right_m">Go to case</a></td>
-                  </tr>
+                  </tr> -->
               </tbody>
           </table>
 {% endblock %}
