--- a/app/views/caseaccess/pages/available-tasks-s2b.html
+++ b/app/views/caseaccess/pages/available-tasks-s2b.html
@@ -27,7 +27,7 @@ My work
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" aria-current="page" href="available-tasks-s2">
+              <a class="hmcts-sub-navigation__link" aria-current="page" href="available-tasks-s2b">
                 Available tasks
               </a>
             </li>
@@ -38,7 +38,7 @@ My work
             </li>
             <li class="hmcts-sub-navigation__item">
               <a class="hmcts-sub-navigation__link" href="#">
-                My cases
+                My access
               </a>
             </li>
           </ul>
