--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -9,7 +9,7 @@ GOV.UK Prototype Kit
       Case access prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (9/3/20) <br><br>SUBJECT TO CHANGE - ERROR STATES TO BE ADDED 
+      Last updated (9/3/20) <br><br>SUBJECT TO CHANGE - ERROR STATES TO BE ADDED
     </h2>
     <div style="display: flex; margin-top: 80px;">
       <div style="width: 800px;">
@@ -37,9 +37,9 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-request?usertype=judiciary&">Request access</a><br>Specifc access - Flow request</br></p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-confirmation?usertype=judiciary&">Confirmation</a><br>Specifc access - Flow request</br></p>
         <p><a target="_blank" href="/caseaccess/pages/myaccess-p?usertype=judiciary&">My access</a><br>Pending Specifc access - Flow request</p>
-        <p><a target="_blank" href="/caseaccess/pages/myaccess-povd?usertype=judiciary&">View access request</a><br>Pending Specifc access - Flow request</p>
+    <!--    <p><a target="_blank" href="/caseaccess/pages/myaccess-povd?usertype=judiciary&">View access request</a><br>Pending Specifc access - Flow request</p>
         <p><a target="_blank" href="/caseaccess/pages/myaccess-pod?usertype=judiciary&">Delete request</a><br>Pending Specifc access - Flow request</p>
-
+-->
         <!-- SECTION BREAK -->
 
         <h2 class="govuk-heading-m">(APPROVER) Approve Specifc access request <br> from AVAILABLE TASKS</h2>
@@ -104,8 +104,8 @@ GOV.UK Prototype Kit
         <h3 class="govuk-heading-s"> Scenario D (a + b) - Part 2 - Granted (Rejected)</h3>
         <p><a target="_blank" href="/caseaccess/pages/myaccess-tcr?usertype=judiciary&">My access</a><br>Specifc access - Flow rejected</p>
         <p><a target="_blank" href="/caseaccess/pages/myaccess-tcrvd?usertype=judiciary&">View details</a><br>Specifc access - Flow rejected</p>
-        <p><a target="_blank" href="/caseaccess/pages/myaccess-tcrd?usertype=judiciary&">Delete request</a><br>Specifc access - Flow rejected</p>
-
+  <!--      <p><a target="_blank" href="/caseaccess/pages/myaccess-tcrd?usertype=judiciary&">Delete request</a><br>Specifc access - Flow rejected</p>
+-->
 
         <!-- SECTION BREAK -->
 
@@ -140,9 +140,9 @@ GOV.UK Prototype Kit
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-request?usertype=staff&">Request access</a><br>Specifc access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-confirmation?usertype=staff&">Confirmation</a><br>Specifc access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/myaccess-p?usertype=staff&">My access</a><br>Pending Specifc access - Flow request</p>
-          <p><a target="_blank" href="/caseaccess/pages/myaccess-povd?usertype=staff&">View access request</a><br>Pending Specifc access - Flow request</p>
+        <!--  <p><a target="_blank" href="/caseaccess/pages/myaccess-povd?usertype=staff&">View access request</a><br>Pending Specifc access - Flow request</p>
           <p><a target="_blank" href="/caseaccess/pages/myaccess-pod?usertype=staff&">Delete request</a><br>Pending Specifc access - Flow request</p>
-
+-->
           <!-- SECTION BREAK -->
 
           <h2 class="govuk-heading-m">(APPROVER) Approve Specifc access request <br> from AVAILABLE TASKS</h2>
@@ -208,8 +208,8 @@ GOV.UK Prototype Kit
           <p><a target="_blank" href="/caseaccess/pages/myaccess-tcr?usertype=staff&">My access</a><br>Specifc access - Flow rejected</p>
           <p><a target="_blank" href="/caseaccess/pages/myaccess-tcrvd?usertype=staff&">View details</a><br>Specifc access - Flow rejected</p>
     <!--      <p><a target="_blank" href="#">Re-request access</a><br>Specifc access - Flow rejected</p> -->
-          <p><a target="_blank" href="/caseaccess/pages/myaccess-tcrd?usertype=staff&">Delete request</a><br>Specifc access - Flow rejected</p>
-
+        <!--  <p><a target="_blank" href="/caseaccess/pages/myaccess-tcrd?usertype=staff&">Delete request</a><br>Specifc access - Flow rejected</p>
+-->
           <!-- SECTION BREAK -->
 
           <h3 class="govuk-heading-s">Scenario E - Booking UI</h3>
