--- a/app/views/caseaccess/pages/myaccess-tcrr.html
+++ b/app/views/caseaccess/pages/myaccess-tcrr.html
@@ -37,7 +37,7 @@ My work
             </li>
             <li class="hmcts-sub-navigation__item">
               <a class="hmcts-sub-navigation__link" aria-current="page"  href="#">
-                My access <span class="xui-alert-link__number">1 </span>
+                My access
               </a>
             </li>
           </ul>
@@ -61,11 +61,11 @@ My work
             <tbody class="govuk-table__body">
 
                   <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Amelia Chu</strong></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Immigration and Asylum</strong></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Reviewer</strong></td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Rejected</strong></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Amelia Chu</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
+                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Rejected</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >&nbsp;&nbsp;&nbsp;<a href="myaccess-tcrvd" class="right_m">View details</a></td>
