--- a/app/views/caseaccess/pages/PA-00467-2017-trr-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trr-case.html
@@ -34,15 +34,15 @@ Case details
   items: [
     {
       value: "email",
-      text: "Reason A (Example: More information needed). Please contact me to discuss further."
+      text: "More information needed. Please contact me to discuss further."
     },
     {
       value: "phone",
-      text: "Reason B. Please contact me to discuss further."
+      text: "Reason B."
     },
     {
       value: "email",
-      text: "Reason C. Please contact me to discuss further."
+      text: "Reason C."
     },
 
     {
@@ -50,7 +50,7 @@ Case details
 },
     {
       value: "other",
-      text: "Other. Please contact me to discuss further.",
+      text: "Other.",
       conditional: {
         html: textHtml
       }
