--- a/app/views/caseaccess/pages/booking-location.html
+++ b/app/views/caseaccess/pages/booking-location.html
@@ -29,12 +29,27 @@ Case details
   </label>
   <select class="govuk-select" id="sort" name="sort">
 
-    <option value="updated" selected>If applicable</option>
+    <option value="updated" selected>Select if applicable</option>
     <option value="views">Something</option>
     <option value="comments">Something else</option>
   </select>
 </div>
 
+    <div class="govuk-form-group">
+      <label class="govuk-label govuk-!-font-size-19" for="sort"><strong>
+      Region</strong>
+      </label>
+      <select class="govuk-select" id="sort" name="sort">
+
+          <option value="updated" selected>Select if applicable</option>
+          <option value="published">All</option>
+        <option value="updated">NE</option>
+        <option value="views">NW</option>
+        <option value="comments">SE</option>
+        <option value="comments">SW</option>
+          <option value="comments">Etc...</option>
+      </select>
+    </div>
     <div class="govuk-form-group">
       <label class="govuk-label govuk-!-font-size-19" for="sort"><strong>
       Location</strong>
@@ -47,7 +62,6 @@ Case details
         <option value="comments">Watford Tribunal Hearing Centre</option>
       </select>
     </div>
-
 
 
 
