--- a/app/views/caseaccess/pages/booking-rtn.html
+++ b/app/views/caseaccess/pages/booking-rtn.html
@@ -19,7 +19,14 @@ Case details
               Select your purpose of work today
             </h1>
           </legend>
+
           <div class="govuk-radios">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="where-do-you-live-3" name="bob" type="radio" value="/caseaccess/pages/mywork">
+              <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+                Continue with my existing booking [Value]
+              </label>
+            </div>
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="/caseaccess/pages/booking-location">
               <label class="govuk-label govuk-radios__label" for="where-do-you-live">
