--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -387,3 +387,19 @@ a.hmcts-search-toggle__button {
     margin-bottom: 0;
   }
 }
+.govuk-tag--red {
+    color: #942514;
+    background: #f6d7d2;
+}
+.govuk-tag--yellow {
+    color: #594d00;
+    background: #fff7bf;
+}
+.govuk-tag--orange {
+    color: #6e3619;
+    background: #fcd6c3;
+}
+.govuk-tag--grey {
+    color: #383f43;
+    background: #eeefef;
+}
