--- a/app/views/caseaccess/pages/PA-00467-2017-atc.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-atc.html
@@ -221,7 +221,7 @@ Case details
                    Date of birth
                  </dt>
                  <dd class="govuk-summary-list__value">
-                   01/23/1998
+                   DD/MM/YYYY 
                  </dd>
 
                </div>
