--- a/app/views/caseaccess/pages/mycases-ro.html
+++ b/app/views/caseaccess/pages/mycases-ro.html
@@ -96,8 +96,8 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Mar 2021</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Apr 2021 </td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY</td>
                     <td class="govuk-table__cell"><a href="#" class="right_">Go to case</a></td>
                 </tr>
 
