--- a/app/views/caseaccess/pages/PA-00467-2017-ar.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-ar.html
@@ -123,7 +123,7 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lead Judge</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">24 Jan 2021</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
             </tr>
@@ -155,7 +155,7 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case manager</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">24 Jan 2021</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
 
