--- a/app/views/caseaccess/pages/available-tasks.html
+++ b/app/views/caseaccess/pages/available-tasks.html
@@ -52,7 +52,7 @@ My work
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
             <th scope="col" class="govuk-table__header"></th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 420px;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Age of task</button></th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Date</button></th>
     <!--  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th> -->
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 130px;" aria-sort="none"><a href="#">(Reset sorting)</a></th>
             </tr>
@@ -65,7 +65,10 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--red">4 days</span> </td>
+                    <td class="govuk-table__cell">{{govukTag({
+text: "dd/mm/yyyy",
+classes: "govuk-tag--red"
+})}} </td>
                   <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
@@ -76,7 +79,10 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--orange">3 days</span>  </td>
+                    <td class="govuk-table__cell">{{govukTag({
+text: "dd/mm/yyyy",
+classes: "govuk-tag--yellow"
+})}} </td>
                   <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
@@ -89,7 +95,10 @@ My work
                     <title>This case has more than one task. Review needed.</title><path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
                     C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" /></svg></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Create case summary</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--orange">3 days</span>  </td>
+                    <td class="govuk-table__cell">{{govukTag({
+text: "dd/mm/yyyy",
+classes: "govuk-tag--yellow"
+})}}  </td>
                   <!--  <td class="govuk-table__cell">N/A</td> -->
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
@@ -100,7 +109,10 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review appellant case</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--green">1 days</span>  </td>
+                    <td class="govuk-table__cell">{{govukTag({
+text: "dd/mm/yyyy",
+classes: "govuk-tag--grey"
+})}} </td>
                   <!--  <td class="govuk-table__cell">N/A</td> -->
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
