--- a/app/views/caseaccess/pages/myaccess-povd.html
+++ b/app/views/caseaccess/pages/myaccess-povd.html
@@ -111,7 +111,7 @@ Case details
               </tr> -->
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Date submitted</th>
-                <td class="govuk-table__cell">DD/Month/YYYY</td>
+                <td class="govuk-table__cell">DD/MM/YYYY</td>
               </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for access</th>
