--- a/app/views/caseaccess/pages/myaccess-r.html
+++ b/app/views/caseaccess/pages/myaccess-r.html
@@ -66,8 +66,8 @@ My work
                   <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
                   <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
                   <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Challenged</td>
-                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Mar 2021</td>
-                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Apr 2021</td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
                   <td class="govuk-table__cell"></td>
                   </tr>
           <!--      <tr class="govuk-table__row">
