--- a/app/views/caseaccess/pages/myaccess-tc.html
+++ b/app/views/caseaccess/pages/myaccess-tc.html
@@ -66,8 +66,8 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Reviewer</strong></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Specific</strong></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>14 Mar 2021</strong></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>14 Mar 2021</strong></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>DD/MM/YYYY </strong></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>DD/MM/YYYY </strong></td>
                     <td class="govuk-table__cell"></td>
                   </tr>
               </tbody>
