--- a/app/views/caseaccess/pages/mycases-tc.html
+++ b/app/views/caseaccess/pages/mycases-tc.html
@@ -59,8 +59,8 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
                   <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Leadership Judge</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">03 Oct 2020 </td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">03 May 2021 </td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY  </td>
                   <!--  <td class="govuk-table__cell">18 Apr 2021</td> -->
                     <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
@@ -70,7 +70,7 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
                     <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing Judge</td>
-                    <td class="govuk-table__cell">09 Nov 2020  </td>
+                    <td class="govuk-table__cell">DD/MM/YYYY  </td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                   <!--   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
                     <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
@@ -80,8 +80,8 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Immigration and Asylum</strong></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Reviewer</strong></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>14 Mar 2021</strong></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>14 Mar 2021</strong></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>DD/MM/YYYY </strong></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>DD/MM/YYYY </strong></td>
                     <td class="govuk-table__cell"><a href="/caseaccess/pages/PA-00467-2017-atc">Goto case</a></td>
                   </tr>
               </tbody>
