--- a/app/views/caseaccess/pages/available-tasks-s2.html
+++ b/app/views/caseaccess/pages/available-tasks-s2.html
@@ -66,7 +66,10 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">London</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review specific access request</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--orange">2 days</span> </td>
+                    <td class="govuk-table__cell">{{govukTag({
+text: "dd/mm/yyyy",
+classes: "govuk-tag--yellow"
+})}}</td>
                   <!--  <td class="govuk-table__cell">N/A</td> -->
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="available-tasks-s2o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
@@ -77,7 +80,10 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--green">1 day</span>  </td>
+                    <td class="govuk-table__cell">{{govukTag({
+text: "dd/mm/yyyy",
+classes: "govuk-tag--grey"
+})}} </td>
                   <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
@@ -86,11 +92,14 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">John Pickering</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">EEA</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path style="fill: orange">
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path style="fill: black">
                     <title>This case has more than one task. Review needed.</title><path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
                     C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" /></svg></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Create case summary</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--green">1 day</span>  </td>
+                    <td class="govuk-table__cell">{{govukTag({
+text: "dd/mm/yyyy",
+classes: "govuk-tag--grey"
+})}} </td>
                   <!--  <td class="govuk-table__cell">N/A</td> -->
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
