--- a/app/views/caseaccess/pages/PA-00321-2018-request-error.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-request-error.html
@@ -41,7 +41,7 @@ Case details
             isPageHeading: true
           },
           hint: {
-            text: "Access will be granted until midnight tonight. You must provide a reason."
+            text: "Access will be granted until midnight tonight. You must provide a Purpose."
           },
   errorMessage: {
     text: "Enter more detail"
