--- a/app/views/caseaccess/pages/PA-00321-2018-request-old.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-request-old.html
@@ -31,7 +31,7 @@ Case details
             isPageHeading: true
           },
           hint: {
-            text: "Access will be granted until midnight tonight. You must provide a reason."
+            text: "Access will be granted until midnight tonight. You must provide a Purpose."
           }
         }) }}
 
