--- a/app/views/caseaccess/pages/PA-00467-2017-request-error.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-request-error.html
@@ -40,7 +40,7 @@ Specific access.<br>Access requires manual authorisation. Access to this case is
             isPageHeading: true
           },
           hint: {
-            text: "Access will be granted until midnight tonight. You must provide a reason."
+            text: "Access will be granted until midnight tonight. You must provide a Purpose."
           },
   errorMessage: {
     text: "Enter more detail"
