--- a/app/views/caseaccess/pages/PA-00467-2017-tr-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tr-case.html
@@ -122,9 +122,9 @@ You've assigned yourself a task. It's available in My tasks.
                 <td class="govuk-table__cell">DD/MM/YYYY</td>
               </tr>
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for access</th>
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Purpose for access</th>
                 <td class="govuk-table__cell">
-Reason A          </tr>
+Purpose A          </tr>
             </tbody>
           </table>
         </div>
