--- a/app/views/caseaccess/pages/PA-00467-2017-request-old.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-request-old.html
@@ -28,7 +28,7 @@ Specific access.<br>Access requires manual authorisation. Access to this case is
             isPageHeading: true
           },
           hint: {
-            text: "Access requires manual authorisation. You must provide a reason."
+            text: "Access requires manual authorisation. You must provide a Purpose."
           }
         }) }}
     {{ govukButton({
