--- a/app/views/caseaccess/pages/PA-00467-2017-request.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-request.html
@@ -42,15 +42,15 @@ Case details
       items: [
         {
           value: "email",
-          text: "Reason A"
+          text: "Purpose A"
         },
         {
           value: "phone",
-          text: "Reason B"
+          text: "Purpose B"
         },
         {
           value: "email",
-          text: "Reason C"
+          text: "Purpose C"
         },
 
         {
