--- a/app/views/caseaccess/pages/PA-00467-2017-tr.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tr.html
@@ -121,7 +121,7 @@ You've assigned yourself a task. It's available in My tasks.
                 <td class="govuk-table__cell">DD/MM/YYYY</td>
               </tr>
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for access</th>
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Purpose for access</th>
                 <td class="govuk-table__cell">
 Reviewer          </tr>
             </tbody>
