--- a/app/views/caseaccess/pages/PA-00467-2017-ta.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-ta.html
@@ -129,7 +129,7 @@ classes: "govuk-tag--grey"
               </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">Next steps</th>
-                <td class="govuk-table__cell"><a href="PA-00467-2017-tr">Review specific access request</a></td>
+                <td class="govuk-table__cell"><a href="PA-00467-2017-tr-case">Review specific access request</a></td>
               </tr>
             </tbody>
           </table>
